# quotepilot

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  SECURITY.md  bootstrap  pyproject.toml  s.yaml
data/: catalog.json  company_profile.json
data/samples/: inquiry_en_1.txt  inquiry_en_2.txt  inquiry_zh_1.txt
deploy/: README.md  package.sh  requirements.txt
dev_tasks/: T10_editable_quote.md  T11_devpost.md  T12_blog.md  T1_web_backend.md  T2_web_templates.md  T2r_templates_revision.md  T3_runs_index.md  T4_agentscope_runner.md  T5_fc_deploy.md  T6_backend_api.md  T7_static_frontend.md  T8_profile_api.md  T9_frontend_settings.md  T9r_frontend_revision.md
docs/: architecture.html  blog.md  design_brief_prompt.md  devpost.md  index.html  media_plan.md  qwen_dev_ledger.jsonl  video_script.md
scripts/: gen_voiceover.py  qwen_dev.py
src/quotepilot/: __init__.py  agent_runner.py  audit.py  cli.py  config.py  core.py  hitl.py  llm.py  models.py  orchestrator.py  profile.py
src/quotepilot/stages/: drafting.py  fx.py  intake.py  pricing.py  render.py  risk.py
src/quotepilot/web/: __init__.py  app.py  auth.py  guard.py  profile_api.py  runs_index.py
src/quotepilot/web/templates/: base.html  dashboard.html  submission.html
templates/: quote.html.j2
tests/: conftest.py  test_orchestrator_gate.py  test_pricing.py  test_profile_api.py  test_render.py  test_reprice.py  test_risk.py  test_runs_index.py  test_web.py
