[project]
name = "quotepilot"
version = "0.1.0"
description = "Autopilot agent that turns cross-border B2B inquiry emails into approved bilingual (EN/ZH) quotes — Qwen Cloud Hackathon Track 4"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
quotepilot = "quotepilot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quotepilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
